2008-11-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: remove leading spaces and trailing spaces in 
	multitable cells.
	* texi2html.pl: do human-readable id for toc, and different id
	for stoc.

2008-11-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: don't do paragraphs in multitables.
	* texi2html.pl, texi2html.init: handle @smallquotation, change 
	quotation_prepend_text and quotation function reference APIs.
	* texi2html.init: put a table line in <tt> if and only if there is
	a code-like environment enclosing the construct.
	* texi2html.pl: warn if the menu order doesn't follow the sectionning
	order.

2008-11-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: associate node with the right file,
	even if after section and split index. 
	Handle better empty @elements_list.

2008-09-25  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: associate nodes that are not already associated 
	with the top node in case only sections are used.
	* texi2html.init: associate elements in split indices to the 
	split indice added element.

2008-09-24  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: remove THIS_HEADER. Instead 
	everything goes to THIS_SECTION. New function reference, 
	element_heading, to format a node or a section heading, including
	navigation and label. Accordingly, print_Top and one_section don't
	print the element header anymore.
	print_element_header and print_navigation now return their result.
	new argument for print_misc and print_misc_header, the misc page
	name.
	labels and headings appear where the command is, instead of always 
	appearing at the beginning of the elements.

2008-09-23  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl,texi2html.init: do added index pages in 
	texi2html.init. Add an element for an index page only it begins 
	a new file. Avoid changing directions as best as possible, while 